Preventing a grid blow out. Protects from content that is too large for the grid area.

--- a/projects/plugins/jetpack/modules/theme-tools/compat/twentytwentyone.css
+++ b/projects/plugins/jetpack/modules/theme-tools/compat/twentytwentyone.css
@@ -83,6 +83,16 @@ body.infinity-end .site-main > div:last-of-type > article:last-of-type .entry-fo
 }
 
 /* Customizer */
-.widget-area [data-customize-partial-type="widget"] {
-	overflow: hidden;
+.widget-area .widget_block {
+	min-width: 0;
+}
+
+@media only screen and (min-width: 1024px) {
+	.widget-area {
+		/*
+			Fix: minimum width of 0
+			See: https://css-tricks.com/preventing-a-grid-blowout/
+		*/
+		grid-template-columns: repeat( 3, minmax(0, 1fr) );
+	}
 }
